# KaMPKit

./: .editorconfig  .gitignore  2.0_ohos_test_publish.sh  CONTACT_US.md  LICENSE.txt  README.md  build.2.0.ohos.gradle.kts  build.gradle.kts  build.kampkit.ohos.gradle.kts  gradle.properties  settings.2.0.ohos.gradle.kts  settings.gradle.kts  settings.kampkit.ohos.gradle.kts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: KaMPKit-Android.yml  KaMPKit-Shared.yml  KaMPKit-iOS.yml  android_build.yml  build-android.yml  build-ios.yml  build.yml  checks.yml  ios_build.yml  ubuntu-check.yml
app/: build.gradle.kts
azure/: android-pipeline.yml  ios-pipeline.yml
buildSrc/: build.gradle.kts
docs/: APP_BUILD.md  DEBUGGING_KOTLIN_IN_XCODE.md  DETAILED_DEV_SETUP.md  GENERAL_ARCHITECTURE.md  IOS_DEV_SETUP.md  IOS_PROJ_INTEGRATION.md  TROUBLESHOOTING.md  WHAT_AND_WHY.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore  Podfile
ios/KaMPKitiOS/: AppDelegate.swift  BreedCell.swift  BreedListScreen.swift  CombineAdapters.swift  ComposeContentView.swift  ContentView.swift  IOSApp.swift  Info.plist  KMMViewModel.swift  Koin.swift  ViewController.swift
ios/KaMPKitiOS.xcodeproj/: project.pbxproj
ios/KaMPKitiOS.xcworkspace/: contents.xcworkspacedata
kotlin-api-client/: README.md  build.gradle.kts  settings.gradle.kts
ohos/: .gitignore  build-profile.json5  build_libshared.sh  copy_header.sh  hvigorfile.ts  oh-package-lock.json5  oh-package.json5  publish.sh  runOhosApp.sh
ohos/entry/src/main/cpp/: CMakeLists.txt  breed_list_napi.cpp  breed_list_napi.h  napi_init.cpp
ohos/entry/src/main/cpp/types/kuikly_entry/: index.d.ts  oh-package.json5
shared/: build.2.0.ohos.gradle.kts  build.gradle.kts  oldhead.h  shared.podspec
sharedcode/: build.gradle.kts  sharedcode.podspec
viewmodel/: build.gradle.kts
(+778 files in other folders)
